# CODSOFT

./: README.md
Calculator/: main.py  pyproject.toml
ContactBOOK/: main.py  pyproject.toml
PassManager/: main.py  pyproject.toml
TODOApp/: .gitignore  Data.py  README.md  main.py  pyproject.toml  tasks.json
